parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmts_opt
Rule 2     stmts_opt -> stmts
Rule 3     stmts_opt -> <empty>
Rule 4     stmts -> stmts stmt
Rule 5     stmts -> stmt
Rule 6     stmt -> ;
Rule 7     stmt -> { stmts }
Rule 8     stmt -> ID = expr ;
Rule 9     stmt -> ID ADDASSIGN expr ;
Rule 10    stmt -> ID SUBASSIGN expr ;
Rule 11    stmt -> ID MULASSIGN expr ;
Rule 12    stmt -> ID DIVASSIGN expr ;
Rule 13    expr -> expr + expr
Rule 14    expr -> expr - expr
Rule 15    expr -> expr * expr
Rule 16    expr -> expr / expr
Rule 17    expr -> expr DOTADD expr
Rule 18    expr -> expr DOTSUB expr
Rule 19    expr -> expr DOTMUL expr
Rule 20    expr -> expr DOTDIV expr
Rule 21    expr -> FLOATNUM
Rule 22    expr -> INTNUM
Rule 23    expr -> ( expr )
Rule 24    expr -> - expr
Rule 25    expr -> expr '
Rule 26    cond -> expr < expr
Rule 27    cond -> expr > expr
Rule 28    cond -> expr LE expr
Rule 29    cond -> expr GE expr
Rule 30    cond -> expr EQ expr
Rule 31    cond -> expr NEQ expr
Rule 32    expr -> [ lists ]
Rule 33    lists -> list
Rule 34    lists -> lists , list
Rule 35    list -> [ seq ]
Rule 36    seq -> expr
Rule 37    seq -> seq , expr
Rule 38    fun -> ZEROS
Rule 39    fun -> EYE
Rule 40    fun -> ONES
Rule 41    expr -> fun ( expr )
Rule 42    stmt -> WHILE ( cond ) stmt
Rule 43    stmt -> FOR ID = expr : expr stmt
Rule 44    stmt -> IF ( cond ) stmt
Rule 45    stmt -> IF ( cond ) stmt ELSE stmt
Rule 46    stmt -> BREAK ;
Rule 47    stmt -> CONTINUE ;
Rule 48    stmt -> RETURN expr ;
Rule 49    stmt -> PRINT STR ;
Rule 50    stmt -> ID list

Terminals, with rules where they appear

'                    : 25
(                    : 23 41 42 44 45
)                    : 23 41 42 44 45
*                    : 15
+                    : 13
,                    : 34 37
-                    : 14 24
/                    : 16
:                    : 43
;                    : 6 8 9 10 11 12 46 47 48 49
<                    : 26
=                    : 8 43
>                    : 27
ADDASSIGN            : 9
BREAK                : 46
CONTINUE             : 47
DIVASSIGN            : 12
DOTADD               : 17
DOTDIV               : 20
DOTMUL               : 19
DOTSUB               : 18
ELSE                 : 45
EQ                   : 30
EYE                  : 39
FLOATNUM             : 21
FOR                  : 43
GE                   : 29
ID                   : 8 9 10 11 12 43 50
IF                   : 44 45
INTNUM               : 22
LE                   : 28
MULASSIGN            : 11
NEQ                  : 31
ONES                 : 40
PRINT                : 49
RETURN               : 48
STR                  : 49
SUBASSIGN            : 10
WHILE                : 42
ZEROS                : 38
[                    : 32 35
]                    : 32 35
error                : 
{                    : 7
}                    : 7

Nonterminals, with rules where they appear

cond                 : 42 44 45
expr                 : 8 9 10 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 23 24 25 26 26 27 27 28 28 29 29 30 30 31 31 36 37 41 43 43 48
fun                  : 41
list                 : 33 34 50
lists                : 32 34
program              : 0
seq                  : 35 37
stmt                 : 4 5 42 43 44 45 45
stmts                : 2 4 7
stmts_opt            : 1

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmts_opt
    (2) stmts_opt -> . stmts
    (3) stmts_opt -> .
    (4) stmts -> . stmts stmt
    (5) stmts -> . stmt
    (6) stmt -> . ;
    (7) stmt -> . { stmts }
    (8) stmt -> . ID = expr ;
    (9) stmt -> . ID ADDASSIGN expr ;
    (10) stmt -> . ID SUBASSIGN expr ;
    (11) stmt -> . ID MULASSIGN expr ;
    (12) stmt -> . ID DIVASSIGN expr ;
    (42) stmt -> . WHILE ( cond ) stmt
    (43) stmt -> . FOR ID = expr : expr stmt
    (44) stmt -> . IF ( cond ) stmt
    (45) stmt -> . IF ( cond ) stmt ELSE stmt
    (46) stmt -> . BREAK ;
    (47) stmt -> . CONTINUE ;
    (48) stmt -> . RETURN expr ;
    (49) stmt -> . PRINT STR ;
    (50) stmt -> . ID list

    $end            reduce using rule 3 (stmts_opt -> .)
    ;               shift and go to state 5
    {               shift and go to state 6
    ID              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14

    program                        shift and go to state 1
    stmts_opt                      shift and go to state 2
    stmts                          shift and go to state 3
    stmt                           shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> stmts_opt .

    $end            reduce using rule 1 (program -> stmts_opt .)


state 3

    (2) stmts_opt -> stmts .
    (4) stmts -> stmts . stmt
    (6) stmt -> . ;
    (7) stmt -> . { stmts }
    (8) stmt -> . ID = expr ;
    (9) stmt -> . ID ADDASSIGN expr ;
    (10) stmt -> . ID SUBASSIGN expr ;
    (11) stmt -> . ID MULASSIGN expr ;
    (12) stmt -> . ID DIVASSIGN expr ;
    (42) stmt -> . WHILE ( cond ) stmt
    (43) stmt -> . FOR ID = expr : expr stmt
    (44) stmt -> . IF ( cond ) stmt
    (45) stmt -> . IF ( cond ) stmt ELSE stmt
    (46) stmt -> . BREAK ;
    (47) stmt -> . CONTINUE ;
    (48) stmt -> . RETURN expr ;
    (49) stmt -> . PRINT STR ;
    (50) stmt -> . ID list

    $end            reduce using rule 2 (stmts_opt -> stmts .)
    ;               shift and go to state 5
    {               shift and go to state 6
    ID              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14

    stmt                           shift and go to state 15

state 4

    (5) stmts -> stmt .

    ;               reduce using rule 5 (stmts -> stmt .)
    {               reduce using rule 5 (stmts -> stmt .)
    ID              reduce using rule 5 (stmts -> stmt .)
    WHILE           reduce using rule 5 (stmts -> stmt .)
    FOR             reduce using rule 5 (stmts -> stmt .)
    IF              reduce using rule 5 (stmts -> stmt .)
    BREAK           reduce using rule 5 (stmts -> stmt .)
    CONTINUE        reduce using rule 5 (stmts -> stmt .)
    RETURN          reduce using rule 5 (stmts -> stmt .)
    PRINT           reduce using rule 5 (stmts -> stmt .)
    $end            reduce using rule 5 (stmts -> stmt .)
    }               reduce using rule 5 (stmts -> stmt .)


state 5

    (6) stmt -> ; .

    ;               reduce using rule 6 (stmt -> ; .)
    {               reduce using rule 6 (stmt -> ; .)
    ID              reduce using rule 6 (stmt -> ; .)
    WHILE           reduce using rule 6 (stmt -> ; .)
    FOR             reduce using rule 6 (stmt -> ; .)
    IF              reduce using rule 6 (stmt -> ; .)
    BREAK           reduce using rule 6 (stmt -> ; .)
    CONTINUE        reduce using rule 6 (stmt -> ; .)
    RETURN          reduce using rule 6 (stmt -> ; .)
    PRINT           reduce using rule 6 (stmt -> ; .)
    $end            reduce using rule 6 (stmt -> ; .)
    }               reduce using rule 6 (stmt -> ; .)
    ELSE            reduce using rule 6 (stmt -> ; .)


state 6

    (7) stmt -> { . stmts }
    (4) stmts -> . stmts stmt
    (5) stmts -> . stmt
    (6) stmt -> . ;
    (7) stmt -> . { stmts }
    (8) stmt -> . ID = expr ;
    (9) stmt -> . ID ADDASSIGN expr ;
    (10) stmt -> . ID SUBASSIGN expr ;
    (11) stmt -> . ID MULASSIGN expr ;
    (12) stmt -> . ID DIVASSIGN expr ;
    (42) stmt -> . WHILE ( cond ) stmt
    (43) stmt -> . FOR ID = expr : expr stmt
    (44) stmt -> . IF ( cond ) stmt
    (45) stmt -> . IF ( cond ) stmt ELSE stmt
    (46) stmt -> . BREAK ;
    (47) stmt -> . CONTINUE ;
    (48) stmt -> . RETURN expr ;
    (49) stmt -> . PRINT STR ;
    (50) stmt -> . ID list

    ;               shift and go to state 5
    {               shift and go to state 6
    ID              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14

    stmts                          shift and go to state 16
    stmt                           shift and go to state 4

state 7

    (8) stmt -> ID . = expr ;
    (9) stmt -> ID . ADDASSIGN expr ;
    (10) stmt -> ID . SUBASSIGN expr ;
    (11) stmt -> ID . MULASSIGN expr ;
    (12) stmt -> ID . DIVASSIGN expr ;
    (50) stmt -> ID . list
    (35) list -> . [ seq ]

    =               shift and go to state 17
    ADDASSIGN       shift and go to state 18
    SUBASSIGN       shift and go to state 19
    MULASSIGN       shift and go to state 20
    DIVASSIGN       shift and go to state 21
    [               shift and go to state 23

    list                           shift and go to state 22

state 8

    (42) stmt -> WHILE . ( cond ) stmt

    (               shift and go to state 24


state 9

    (43) stmt -> FOR . ID = expr : expr stmt

    ID              shift and go to state 25


state 10

    (44) stmt -> IF . ( cond ) stmt
    (45) stmt -> IF . ( cond ) stmt ELSE stmt

    (               shift and go to state 26


state 11

    (46) stmt -> BREAK . ;

    ;               shift and go to state 27


state 12

    (47) stmt -> CONTINUE . ;

    ;               shift and go to state 28


state 13

    (48) stmt -> RETURN . expr ;
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    expr                           shift and go to state 29
    fun                            shift and go to state 35

state 14

    (49) stmt -> PRINT . STR ;

    STR             shift and go to state 39


state 15

    (4) stmts -> stmts stmt .

    ;               reduce using rule 4 (stmts -> stmts stmt .)
    {               reduce using rule 4 (stmts -> stmts stmt .)
    ID              reduce using rule 4 (stmts -> stmts stmt .)
    WHILE           reduce using rule 4 (stmts -> stmts stmt .)
    FOR             reduce using rule 4 (stmts -> stmts stmt .)
    IF              reduce using rule 4 (stmts -> stmts stmt .)
    BREAK           reduce using rule 4 (stmts -> stmts stmt .)
    CONTINUE        reduce using rule 4 (stmts -> stmts stmt .)
    RETURN          reduce using rule 4 (stmts -> stmts stmt .)
    PRINT           reduce using rule 4 (stmts -> stmts stmt .)
    $end            reduce using rule 4 (stmts -> stmts stmt .)
    }               reduce using rule 4 (stmts -> stmts stmt .)


state 16

    (7) stmt -> { stmts . }
    (4) stmts -> stmts . stmt
    (6) stmt -> . ;
    (7) stmt -> . { stmts }
    (8) stmt -> . ID = expr ;
    (9) stmt -> . ID ADDASSIGN expr ;
    (10) stmt -> . ID SUBASSIGN expr ;
    (11) stmt -> . ID MULASSIGN expr ;
    (12) stmt -> . ID DIVASSIGN expr ;
    (42) stmt -> . WHILE ( cond ) stmt
    (43) stmt -> . FOR ID = expr : expr stmt
    (44) stmt -> . IF ( cond ) stmt
    (45) stmt -> . IF ( cond ) stmt ELSE stmt
    (46) stmt -> . BREAK ;
    (47) stmt -> . CONTINUE ;
    (48) stmt -> . RETURN expr ;
    (49) stmt -> . PRINT STR ;
    (50) stmt -> . ID list

    }               shift and go to state 40
    ;               shift and go to state 5
    {               shift and go to state 6
    ID              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14

    stmt                           shift and go to state 15

state 17

    (8) stmt -> ID = . expr ;
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    expr                           shift and go to state 41
    fun                            shift and go to state 35

state 18

    (9) stmt -> ID ADDASSIGN . expr ;
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    expr                           shift and go to state 42
    fun                            shift and go to state 35

state 19

    (10) stmt -> ID SUBASSIGN . expr ;
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    expr                           shift and go to state 43
    fun                            shift and go to state 35

state 20

    (11) stmt -> ID MULASSIGN . expr ;
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    expr                           shift and go to state 44
    fun                            shift and go to state 35

state 21

    (12) stmt -> ID DIVASSIGN . expr ;
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    expr                           shift and go to state 45
    fun                            shift and go to state 35

state 22

    (50) stmt -> ID list .

    ;               reduce using rule 50 (stmt -> ID list .)
    {               reduce using rule 50 (stmt -> ID list .)
    ID              reduce using rule 50 (stmt -> ID list .)
    WHILE           reduce using rule 50 (stmt -> ID list .)
    FOR             reduce using rule 50 (stmt -> ID list .)
    IF              reduce using rule 50 (stmt -> ID list .)
    BREAK           reduce using rule 50 (stmt -> ID list .)
    CONTINUE        reduce using rule 50 (stmt -> ID list .)
    RETURN          reduce using rule 50 (stmt -> ID list .)
    PRINT           reduce using rule 50 (stmt -> ID list .)
    $end            reduce using rule 50 (stmt -> ID list .)
    }               reduce using rule 50 (stmt -> ID list .)
    ELSE            reduce using rule 50 (stmt -> ID list .)


state 23

    (35) list -> [ . seq ]
    (36) seq -> . expr
    (37) seq -> . seq , expr
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    seq                            shift and go to state 46
    expr                           shift and go to state 47
    fun                            shift and go to state 35

state 24

    (42) stmt -> WHILE ( . cond ) stmt
    (26) cond -> . expr < expr
    (27) cond -> . expr > expr
    (28) cond -> . expr LE expr
    (29) cond -> . expr GE expr
    (30) cond -> . expr EQ expr
    (31) cond -> . expr NEQ expr
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    cond                           shift and go to state 48
    expr                           shift and go to state 49
    fun                            shift and go to state 35

state 25

    (43) stmt -> FOR ID . = expr : expr stmt

    =               shift and go to state 50


state 26

    (44) stmt -> IF ( . cond ) stmt
    (45) stmt -> IF ( . cond ) stmt ELSE stmt
    (26) cond -> . expr < expr
    (27) cond -> . expr > expr
    (28) cond -> . expr LE expr
    (29) cond -> . expr GE expr
    (30) cond -> . expr EQ expr
    (31) cond -> . expr NEQ expr
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    cond                           shift and go to state 51
    expr                           shift and go to state 49
    fun                            shift and go to state 35

state 27

    (46) stmt -> BREAK ; .

    ;               reduce using rule 46 (stmt -> BREAK ; .)
    {               reduce using rule 46 (stmt -> BREAK ; .)
    ID              reduce using rule 46 (stmt -> BREAK ; .)
    WHILE           reduce using rule 46 (stmt -> BREAK ; .)
    FOR             reduce using rule 46 (stmt -> BREAK ; .)
    IF              reduce using rule 46 (stmt -> BREAK ; .)
    BREAK           reduce using rule 46 (stmt -> BREAK ; .)
    CONTINUE        reduce using rule 46 (stmt -> BREAK ; .)
    RETURN          reduce using rule 46 (stmt -> BREAK ; .)
    PRINT           reduce using rule 46 (stmt -> BREAK ; .)
    $end            reduce using rule 46 (stmt -> BREAK ; .)
    }               reduce using rule 46 (stmt -> BREAK ; .)
    ELSE            reduce using rule 46 (stmt -> BREAK ; .)


state 28

    (47) stmt -> CONTINUE ; .

    ;               reduce using rule 47 (stmt -> CONTINUE ; .)
    {               reduce using rule 47 (stmt -> CONTINUE ; .)
    ID              reduce using rule 47 (stmt -> CONTINUE ; .)
    WHILE           reduce using rule 47 (stmt -> CONTINUE ; .)
    FOR             reduce using rule 47 (stmt -> CONTINUE ; .)
    IF              reduce using rule 47 (stmt -> CONTINUE ; .)
    BREAK           reduce using rule 47 (stmt -> CONTINUE ; .)
    CONTINUE        reduce using rule 47 (stmt -> CONTINUE ; .)
    RETURN          reduce using rule 47 (stmt -> CONTINUE ; .)
    PRINT           reduce using rule 47 (stmt -> CONTINUE ; .)
    $end            reduce using rule 47 (stmt -> CONTINUE ; .)
    }               reduce using rule 47 (stmt -> CONTINUE ; .)
    ELSE            reduce using rule 47 (stmt -> CONTINUE ; .)


state 29

    (48) stmt -> RETURN expr . ;
    (13) expr -> expr . + expr
    (14) expr -> expr . - expr
    (15) expr -> expr . * expr
    (16) expr -> expr . / expr
    (17) expr -> expr . DOTADD expr
    (18) expr -> expr . DOTSUB expr
    (19) expr -> expr . DOTMUL expr
    (20) expr -> expr . DOTDIV expr
    (25) expr -> expr . '

    ;               shift and go to state 52
    +               shift and go to state 53
    -               shift and go to state 54
    *               shift and go to state 55
    /               shift and go to state 56
    DOTADD          shift and go to state 57
    DOTSUB          shift and go to state 58
    DOTMUL          shift and go to state 59
    DOTDIV          shift and go to state 60
    '               shift and go to state 61


state 30

    (24) expr -> - . expr
    (13) expr -> . expr + expr
    (14) expr -> . expr - expr
    (15) expr -> . expr * expr
    (16) expr -> . expr / expr
    (17) expr -> . expr DOTADD expr
    (18) expr -> . expr DOTSUB expr
    (19) expr -> . expr DOTMUL expr
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . FLOATNUM
    (22) expr -> . INTNUM
    (23) expr -> . ( expr )
    (24) expr -> . - expr
    (25) expr -> . expr '
    (32) expr -> . [ lists ]
    (41) expr -> . fun ( expr )
    (38) fun -> . ZEROS
    (39) fun -> . EYE
    (40) fun -> . ONES

    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    (               shift and go to state 33
    -               shift and go to state 30
    [               shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ONES            shift and go to state 38

    expr                           shift and go to state 62
    fun                            shift and go to state 35

state 31

    (21) expr -> FLOATNUM .
